--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -6,19 +6,38 @@
         xmlns:local="clr-namespace:ServerComandas" 
         xmlns:viewmodels1="clr-namespace:Comandas_Server.ViewModels"
         mc:Ignorable="d"
-        Title="Server Comandas" Icon="/Assets/sushicon.png" Height="520" Width="1000">
+        Title="Server Comandas" Icon="/Assets/sushicon.png" Height="540" Width="1000">
 
     <Window.DataContext>
         <viewmodels1:ServerViewModel x:Name="lista"></viewmodels1:ServerViewModel>
     </Window.DataContext>
     <Grid>
+        <Grid.Resources>
+        
+                <Style TargetType="Label">
+                    <Setter Property="FontSize" Value="14"/>
+
+
+                </Style>
+
+            <Style TargetType="TextBlock">
+                <Setter Property="FontSize" Value="14"/>
+
+
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="FontSize" Value="14"/>
+
+
+            </Style>
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.8*"></ColumnDefinition>
             <ColumnDefinition Width="0.2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <DockPanel Background="#FFB899" Grid.Column="1"  DockPanel.Dock="Right" >
-            <TextBlock Padding="5" FontSize="15"   Background="#FF6324" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" DockPanel.Dock="Top">Entregados</TextBlock>
-            <ScrollViewer VerticalScrollBarVisibility="Auto"   >
+            <TextBlock Padding="5" FontSize="20"   Background="#FF6324" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" DockPanel.Dock="Top">Entregados</TextBlock>
+            <ScrollViewer VerticalScrollBarVisibility="Hidden"   >
                 <ItemsControl ItemsSource="{Binding ListaEntregados}">
                     <ItemsControl.Background>
                         <ImageBrush ImageSource="/Assets/fondo3.jpg" Stretch="UniformToFill"></ImageBrush>
@@ -50,7 +69,7 @@
                 <Border.Background>
                     <ImageBrush ImageSource="/Assets/flores.png" Stretch="UniformToFill"></ImageBrush>
                 </Border.Background>
-                <TextBlock FontSize="15" Padding="5"  Margin="0" Foreground="White" Text="DonMai Sushi Comandas"  TextAlignment="Center" FontWeight="Bold" FontStyle="Italic"  HorizontalAlignment="Center" >
+                <TextBlock FontSize="20"  Padding="5"  Margin="0" Foreground="White" Text="DonMai Sushi Comandas"  TextAlignment="Center" FontWeight="Bold" FontStyle="Italic"  HorizontalAlignment="Center" >
                     <TextBlock.Effect>
                         <DropShadowEffect></DropShadowEffect>
                     </TextBlock.Effect>
@@ -61,11 +80,28 @@
               
         
                 <Button  Width="100" Content="Iniciar" Padding="5" Command="{Binding IniciarCommand}" Margin="2" HorizontalAlignment="Center" Background="#253333" Foreground="White"  >
-
+             
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="5"/>
+                          
+
                         </Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Visibility" Value="Visible"></Setter>
+                            <Style.Triggers>
+                                <DataTrigger    Binding="{Binding Iniciado}" Value="true">
+                                    <Setter Property="Content" Value="Iniciado."></Setter>
+                                    <Setter Property="Foreground" Value="Black"></Setter>
+                               
+                                    <Setter Property="IsEnabled" Value="False"></Setter>
+                                   
+                                </DataTrigger>
+                            </Style.Triggers>
+
+
+                        </Style>
+
                     </Button.Resources>
 
                 </Button>
@@ -75,7 +111,7 @@
                 
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border HorizontalAlignment="Left"  Height="380" Width="240"   BorderThickness="1" BorderBrush="#9E642A" Padding="0" Margin="5"  CornerRadius="15">
+                        <Border HorizontalAlignment="Left"  Height="400" Width="250"   BorderThickness="1" BorderBrush="#9E642A" Padding="0" Margin="5"  CornerRadius="15">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Assets/sushi.png"></ImageBrush>
 
@@ -92,8 +128,8 @@
                                     <Label Content="{Binding Mesa}"  ContentStringFormat="Mesa: {0}."></Label>
                                     <Grid Background="#49E696" Margin="0,0,0,0" >
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition  Width="0.5*"></ColumnDefinition>
-                                            <ColumnDefinition  Width="0.25*"></ColumnDefinition>
+                                            <ColumnDefinition  Width="0.45*"></ColumnDefinition>
+                                            <ColumnDefinition  Width="0.30*"></ColumnDefinition>
                                             <ColumnDefinition  Width="0.25*"></ColumnDefinition>
                                         </Grid.ColumnDefinitions>
                                         <Label HorizontalContentAlignment="Left" BorderThickness="0,0,0,1" Padding="0" Margin="0"   BorderBrush="Black"  Grid.Column="0">Pedido</Label>
@@ -108,23 +144,23 @@
                                                     <Grid  Margin="0"    >
 
                                                         <Grid.ColumnDefinitions>
-                                                            <ColumnDefinition  Width="0.5*">
+                                                            <ColumnDefinition  Width="0.45*">
 
                                                             </ColumnDefinition>
-                                                            <ColumnDefinition  Width="0.25*">
+                                                            <ColumnDefinition  Width="0.30*">
 
                                                             </ColumnDefinition>
                                                             <ColumnDefinition  Width="0.25*"></ColumnDefinition>
                                                         </Grid.ColumnDefinitions>
 
                                                         <Border BorderThickness="0,0,0,1"    BorderBrush="Black" Grid.Column="1"  Padding="0" Margin="0" >
-                                                            <Label HorizontalContentAlignment="Left"    Grid.Column="1" Padding="0" Margin="0"    Content="{Binding Value.Precio}" ContentStringFormat=" {0}$"></Label>
+                                                            <Label HorizontalContentAlignment="Left"  Padding="0" Margin="0"    Content="{Binding Value.Precio}" ContentStringFormat=" {0}$"></Label>
                                                         </Border>
                                                         <Border BorderThickness="0,0,0,1"  BorderBrush="Black" Grid.Column="0"   >
-                                                            <TextBlock TextAlignment="Left" TextWrapping="Wrap"   Grid.Column="0"    Text="{Binding Key}"></TextBlock>
+                                                            <TextBlock TextAlignment="Left" TextWrapping="Wrap"     Text="{Binding Key}"></TextBlock>
                                                         </Border>
                                                         <Border BorderThickness="0,0,0,1"    BorderBrush="Black" Grid.Column="2"  Padding="0" Margin="0" >
-                                                            <Label HorizontalContentAlignment="Left"    Grid.Column="1" Padding="0" Margin="0"    Content="{Binding Value.Cantidad}"></Label>
+                                                            <Label HorizontalContentAlignment="Left"    Padding="0" Margin="0"    Content="{Binding Value.Cantidad}"></Label>
                                                         </Border>
                                                     </Grid>
                                                 </DataTemplate>
